ci: chore(runner os): ubuntu 24.04 test
Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     name: Build Kernel
     strategy:
       fail-fast: false
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       contents: write
 
