--- a/.github/workflows/close-pr.yml
+++ b/.github/workflows/close-pr.yml
@@ -11,25 +11,28 @@ jobs:
     steps:
       - name: Check out PR code
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
+      - name: Fetch base branch
+        run: |
+          # Fetch the base branch from the upstream repository
+          git remote add upstream https://github.com/dabao1955/kernel_build_action
+          git fetch upstream main
 
       - name: Check if .github/workflows/main.yml was changed
         id: check_files
         run: |
-          # Fetch the base branch to compare
-          git fetch origin ${{ github.event.pull_request.base.ref }}
-
           # Check for changes in main.yml between PR and base branch
-          if git diff --name-only origin/${{ github.event.pull_request.base.ref }} HEAD | grep -q "^.github/workflows/main.yml$"; then
+          if git diff --name-only HEAD upstream/${{ github.event.pull_request.base.ref }} | grep -q "^.github/workflows/build.yml$"; then
             echo "file_changed=true" >> $GITHUB_ENV
           else
             echo "file_changed=false" >> $GITHUB_ENV
           fi
-
-      - name: Close PR if main.yml changed
+      - name: Close PR if build.yml changed
         if: env.file_changed == 'true'
-        uses: peter-evans/close-pull-request@v4
+        uses: actions/stale@v9
         with:
-          comment: |
-            This pull request is being automatically closed because it includes changes to the workflow file `.github/workflows/main.yml`.
+          days-before-pr-stale: 0
+          # Number of days before a pull request is closed.
+          days-before-pr-close: 0
+          # Message posted when closing a pull request.
+          stale-pr-message: |
+            This pull request has been automatically closed because you can not submit pr while build.yml changed.
