--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,5 +27,5 @@ jobs:
           android-version: 12
           aosp-clang-version: r383902
           python-27: true
-          disable-lto: true
+          disable-lto: false
           anykernel3: true
