--- a/action.yml
+++ b/action.yml
@@ -334,7 +334,9 @@ runs:
 
          if [ ${{ inputs.lxc }} = true ]; then
              echo "::group:: Enabling LXC"
-             curl -SsL https://github.com/dabao1955/kernel_build_action/raw/main/lxc/config.sh | bash -s ${{ inputs.config }} -w
+             test -d lxc || mkdir -p -v lxc
+             aria2c https://github.com/dabao1955/kernel_build_action/raw/main/lxc/Kconfig -o lxc/Kconfig
+             echo 'source "lxc/Kconfig"' >> Kconfig
              grep -q "CONFIG_ANDROID_PARANOID_NETWORK" "arch/${{ inputs.arch }}/configs/${{ inputs.config }}" && sed -i 's/CONFIG_ANDROID_PARANOID_NETWORK=y/#CONFIG_ANDROID_PARANOID_NETWORK=y/' arch/${{ inputs.arch }}/configs/${{ inputs.config }}
              if [ ${{ inputs.lxc-patch }} = true ]; then
                  aria2c https://github.com/dabao1955/kernel_build_action/raw/main/lxc/xt_qtaguid.patch
@@ -464,6 +466,10 @@ runs:
         tag_name: last-ci
         files: build/*
         make_latest: true
+        body: |
+            config: ${{ inputs.config }}
+            branch: ${{ inputs.kernel-branch }}
+            source: ${{ inputs.kernel-url }}
 
 posts:
   using: 'composite'
