actions: fix(mkdtboimg): add more check
ref:
https://github.com/PocoF3Releases/kernel_xiaomi_sm8250/blob/aosp-14/scripts/Makefile.lib
https://github.com/dabao1955/kernel_build_action/commit/0b885b5cab216dae50b99a7839069a22eaccd516

Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/action.yml
+++ b/action.yml
@@ -295,8 +295,10 @@ runs:
             if grep python2 scripts/Makefile.lib >/dev/null; then
                 echo "::group:: Uning mkdtboimg Python3 version instead of Python2 version"
                 rm -rf -v scripts/dtc/libfdt/mkdtboimg.py && aria2c https://github.com/dabao1955/kernel_build_action/raw/main/mkdtboimg.py -o scripts/dtc/libfdt/mkdtboimg.py
-                test -f /usr/bin/python2 || sudo ln -s -f -v /usr/bin/python3 /usr/bin/python2
+            elif grep scripts/ufdt && test ! -d scripts/ufdt >/dev/null; then
+                aria2c https://github.com/dabao1955/kernel_build_action/raw/main/mkdtboimg.py -o ufdt/libufdt/utils/src/mkdtboimg.py
             fi
+            test -f /usr/bin/python2 || sudo ln -s -f -v /usr/bin/python3 /usr/bin/python2
          fi
          echo "::endgroup::"
 
