--- a/action.yml
+++ b/action.yml
@@ -55,6 +55,22 @@ inputs:
     description: 'Disable LTO configs for configs.'
     required: false
     default: false
+  lxc:
+    description: 'Enable lxc and docker configs for configs.'
+    required: false
+    default: false
+  lxc-patch:
+    description: 'Apply lxc patch aviod not booting'
+    required: false
+    default: false
+  nethunter:
+    description: 'Enable Kali nethunter'
+    required: false
+    default: false
+  nethunter-patch:
+    description: 'patch config'
+    required: false
+    default: false
   kvm:
     description: 'Enable KVM for configs.'
     required: false
@@ -286,6 +302,21 @@ runs:
          fi
          echo "::endgroup::"
 
+         if [ ${{ inputs.nethunter }} = true ]; then
+             echo "::group:: Initializing Kali nethunter"
+             aria2c https://github.com/dabao1955/kernel_build_action/raw/main/nethunter/config.sh -o nconfig.sh &&  bash nconfig.sh arch/${{ inputs.arch }}/configs/${{ inputs.config }} -w
+             if [ ${{ inputs.nethunter-patch }} = true ]; then
+                 aria2c https://github.com/dabao1955/kernel_build_action/raw/main/nethunter/add-wifi-injection.patch && git apply add-wifi-injection.patch
+                 aria2c apply https://github.com/dabao1955/kernel_build_action/raw/main/nethunter/fix-ath9k-naming-conflict.patch && git apply fix-ath9k-naming-confict.patch
+                 if [ "$SUBLEVEL" -lt "19" ]; then
+                     aria2c https://github.com/dabao1955/kernel_build_action/raw/main/nethunter/add-wifi-injection-4.14.patch && git apply add-wifi-injection-4.14.patch
+                 fi
+             else
+                  echo "skip patch"
+             fi
+             echo "::endgroup::"
+         fi
+
          if [ ${{ inputs.disable-lto }} = true ]; then
              if grep -q "LTO" "arch/${{ inputs.arch }}/configs/${{ inputs.config }}"
              then
@@ -301,6 +332,20 @@ runs:
             echo "CONFIG_KVM=y" | tee -a arch/${{ inputs.arch }}/configs/${{ inputs.config }} >/dev/null
             echo "CONFIG_KVM_MMIO=y" | tee -a arch/${{ inputs.arch }}/configs/${{ inputs.config }} >/dev/null
             echo "CONFIG_KVM_ARM_HOST=y" | tee -a arch/${{ inputs.arch }}/configs/${{ inputs.config }} >/dev/null
+         fi
+
+         if [ ${{ inputs.lxc }} = true ]; then
+             echo "::group:: Enabling LXC"
+             aria2c https://github.com/dabao1955/kernel_build_action/raw/main/lxc/config.sh && bash config.sh arch/${{ inputs.arch }}/configs/${{ inputs.config }} -w
+             if [ ${{ inputs.lxc-patch }} = true ]; then
+                 aria2c https://github.com/dabao1955/kernel_build_action/raw/main/lxc/xt_qtaguid.patch
+                 aria2c https://github.com/dabao1955/kernel_build_action/raw/main/lxc/cgroup.patch
+                 patch kernel/cgroup/cgroup.c < cgroup.patch
+                 patch net/netfilter/xt_qtaguid.c < xt_qtaguid.patch
+             else
+                 echo skip lxc patching
+             fi
+             echo "::endgroup::"
          fi
 
          echo "::group:: Building Kernel with selected cross compiler"
